# near-tic-tac-toe

./: .gitignore  README.md  Readme.md  package-lock.json  package.json  tea.yaml
contract/: Cargo.toml  complie.sh
contract/src/: lib.rs  views.rs
contract_scripts/: 01_deploy.js  02_inti.js  03_create-game.js  04_play.js
src/: config.js  index.html  main.js  style.css
